// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el GifItem Titulo debe ser obligatorio 1`] = `
<div>
  <div
    class="card"
  >
    <img
      alt="Saitama"
    />
    <p>
      Saitama
    </p>
  </div>
</div>
`;

exports[`Pruebas en el GifItem Url debe ser obligatorio 1`] = `
<div>
  <div
    class="card"
  >
    <img
      src="https://one-punch.com/saitama.jpg"
    />
    <p />
  </div>
</div>
`;
